--- a/make_grid.ipynb
+++ b/make_grid.ipynb
@@ -70,14 +70,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Constructing grid 100.0% (10018800/10018800) "
+      "Constructing grid 100.0% (620160/620160) "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5917.80432415\n"
+      "23256.4000762\n"
      ]
     },
     {
@@ -105,11 +105,11 @@
    "source": [
     "# dump results to disk\n",
     "import h5py, json\n",
-    "grid_vers = 'v3'\n",
+    "grid_vers = 'v4'\n",
     "with h5py.File(\"data/grid_{}.h5\".format(grid_vers), \"w\") as out:\n",
     "    labels = out.create_dataset(\"labels\", data=mist.grid_label[mist.grid_sel])\n",
     "    pars = out.create_dataset(\"parameters\", data=mist.grid_param[mist.grid_sel])\n",
-    "    seds = out.create_dataset(\"magnitudes\", data=mist.grid_sed[mist.grid_sel])"
+    "    seds = out.create_dataset(\"mag_coeffs\", data=mist.grid_sed[mist.grid_sel])"
    ]
   }
  ],
