--- a/make_grid.ipynb
+++ b/make_grid.ipynb
@@ -10,23 +10,8 @@
    "source": [
     "from __future__ import print_function, division\n",
     "import sys\n",
-    "import pickle\n",
     "import numpy as np\n",
-    "import scipy\n",
-    "import matplotlib\n",
-    "from matplotlib import pyplot as plt\n",
-    "from six.moves import range\n",
-    "import time\n",
-    "from scipy.special import logsumexp\n",
-    "from scipy.stats import truncnorm\n",
-    "\n",
-    "# import frankenz code\n",
-    "import frankenz as fz\n",
-    "\n",
-    "# plot in-line within the notebook\n",
-    "%matplotlib inline\n",
-    "\n",
-    "np.random.seed(300418)"
+    "import time"
    ]
   },
   {
@@ -77,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23256.4000762\n"
+      "21768.627579\n"
      ]
     },
     {
@@ -104,7 +89,7 @@
    "outputs": [],
    "source": [
     "# dump results to disk\n",
-    "import h5py, json\n",
+    "import h5py\n",
     "grid_vers = 'v4'\n",
     "with h5py.File(\"data/grid_{}.h5\".format(grid_vers), \"w\") as out:\n",
     "    labels = out.create_dataset(\"labels\", data=mist.grid_label[mist.grid_sel])\n",
