--- a/demos/make_grid.ipynb
+++ b/demos/make_grid.ipynb
@@ -1,27 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generating an SED Grid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook generates a grid of stellar models based on the MIST isochrones. It buids on [`MINESweeper`](https://github.com/pacargile/MINESweeper). For the data files needed to generate these data, please contact [Phil Cargile](https://github.com/pacargile)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from __future__ import print_function, division\n",
-    "import sys\n",
-    "import numpy as np\n",
+    "# basic imports\n",
+    "from __future__ import print_function\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# brutus imports\n",
     "import brutus\n",
     "from brutus import seds"
    ]
@@ -43,26 +53,27 @@
     }
    ],
    "source": [
-    "mist = seds.SEDmaker()  # all filters"
+    "# initialize the SED maker\n",
+    "mist = seds.SEDmaker()  # default: all filters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Constructing grid 100.0% (620160/620160) "
+      "Constructing grid 100.00% (924160/924160) [mini=10.000, eep=802.000, feh= 0.500]            "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6850.47863197\n"
+      "6586.306263446808\n"
      ]
     },
     {
@@ -74,47 +85,51 @@
     }
    ],
    "source": [
+    "# build the SED grid\n",
     "t1 = time.time()\n",
-    "mist.make_grid()  # default settings\n",
+    "mist.make_grid()  # use default grid settings\n",
     "t2 = time.time()\n",
+    "\n",
+    "# print runtime\n",
     "print(t2-t1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# dump results to disk\n",
     "import h5py\n",
-    "grid_vers = 'v4.1'\n",
+    "grid_vers = 'v5'  # version number\n",
     "with h5py.File(\"../data/grid_{}.h5\".format(grid_vers), \"w\") as out:\n",
+    "    # labels used to generate the grid\n",
     "    labels = out.create_dataset(\"labels\", data=mist.grid_label[mist.grid_sel])\n",
+    "    # parameters generated interpolating from the MIST isochrones\n",
     "    pars = out.create_dataset(\"parameters\", data=mist.grid_param[mist.grid_sel])\n",
+    "    # SEDS generated from \n",
     "    seds = out.create_dataset(\"mag_coeffs\", data=mist.grid_sed[mist.grid_sel])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
