--- a/demos/make_grid.ipynb
+++ b/demos/make_grid.ipynb
@@ -11,99 +11,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook generates a grid of stellar models based on the MIST isochrones. It buids on [`MINESweeper`](https://github.com/pacargile/MINESweeper). For the data files needed to generate these data, please contact [Phil Cargile](https://github.com/pacargile)."
+    "This notebook generates a grid of stellar models based on the MIST isochrones. It is based on [`MINESweeper`](https://github.com/pacargile/MINESweeper). For the data files needed to generate these data, please contact [Phil Cargile](https://github.com/pacargile) and [Josh Speagle](https://github.com/joshspeagle)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# basic imports\n",
-    "from __future__ import print_function\n",
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# brutus imports\n",
     "import brutus\n",
-    "from brutus import seds"
+    "from brutus import seds\n",
+    "from brutus import filters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Filters: ['Gaia_G_DR2Rev', 'Gaia_BP_DR2Rev', 'Gaia_RP_DR2Rev', 'SDSS_u', 'SDSS_g', 'SDSS_r', 'SDSS_i', 'SDSS_z', 'PS_g', 'PS_r', 'PS_i', 'PS_z', 'PS_y', 'DECam_u', 'DECam_g', 'DECam_r', 'DECam_i', 'DECam_z', 'DECam_Y', 'Tycho_B', 'Tycho_V', 'Bessell_U', 'Bessell_B', 'Bessell_V', 'Bessell_R', 'Bessell_I', '2MASS_J', '2MASS_H', '2MASS_Ks', 'UKIDSS_Z', 'UKIDSS_Y', 'UKIDSS_J', 'UKIDSS_H', 'UKIDSS_K', 'WISE_W1', 'WISE_W2', 'WISE_W3', 'WISE_W4', 'GALEX_NUV', 'GALEX_FUV', 'Hipparcos_Hp', 'Kepler_D51', 'Kepler_Kp', 'TESS']\n",
-      "Constructing MIST library...done!\n",
-      "Computing age weights for track (mini, feh)=(300.0, 0.5)        \n",
-      "Initializing FastNN predictor...done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# initialize the SED maker\n",
-    "mist = seds.SEDmaker()  # default: all filters"
+    "mist = seds.SEDmaker(corrfile='../data/corr_mist_v1.txt')  # default: all filters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Constructing grid 100.00% (924160/924160) [mini=10.000, eep=802.000, feh= 0.500]            "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6586.306263446808\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# build the SED grid\n",
-    "t1 = time.time()\n",
-    "mist.make_grid()  # use default grid settings\n",
-    "t2 = time.time()\n",
-    "\n",
-    "# print runtime\n",
-    "print(t2-t1)"
+    "mist.make_grid()  # use default grid settings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# dump results to disk\n",
     "import h5py\n",
-    "grid_vers = 'v5'  # version number\n",
-    "with h5py.File(\"../data/grid_{}.h5\".format(grid_vers), \"w\") as out:\n",
+    "grid_vers = 'v7'  # version number\n",
+    "with h5py.File(\"../data/grid_mist_{}.h5\".format(grid_vers), \"w\") as out:\n",
     "    # labels used to generate the grid\n",
     "    labels = out.create_dataset(\"labels\", data=mist.grid_label[mist.grid_sel])\n",
     "    # parameters generated interpolating from the MIST isochrones\n",
