--- a/demos/Overview 3 - Fitting Individual Sources.ipynb
+++ b/demos/Overview 3 - Fitting Individual Sources.ipynb
@@ -120,7 +120,7 @@
     "filt = filters.ps[:-2] + filters.tmass\n",
     "\n",
     "# import EEP tracks\n",
-    "nnfile = '../data/DATAFILES/nnMIST_BC.h5'\n",
+    "nnfile = '../data/DATAFILES/nn_c3k.h5'\n",
     "mistfile = '../data/DATAFILES/MIST_1.2_EEPtrk.h5'\n",
     "sedmaker = seds.SEDmaker(filters=filt, nnfile=nnfile, mistfile=mistfile)\n",
     "\n",
